Try to manage gtk-fontconfig-timestamp.

This is a partial workaround to https://gitlab.gnome.org/GNOME/gtk/-/issues/7039

Sadly, it's a partial workaround due to the first bug described in the
issue.